--- a/index.html
+++ b/index.html
@@ -20,15 +20,16 @@
       position: absolute;
       top: 0px;     /* adjust as needed */
       left: 0px;    /* adjust as needed */
-      width: 150px;  /* optional size */
+      width: 350px;  /* optional size */
       pointer-events: none; /* allows clicks to pass through to canvas */
       z-index: 1;    /* ensure it stays above the canvas */
     }
     img {
-        width: 100px;
+        width: 350px;
     }
     #rela div {
         color: yellow;
+        font-size: 40px;
     }
   </style>
 </head>
