--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Fireworks on Touch</title>
+  <title>今天是几号？</title>
   <style>
     body {
       margin: 0;
