--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
       width: 100vw;
       height: 100vh;
     }
-    canvas {
+    /* canvas {
       display: block;
-    }
+    } */
     #rela {
       position: absolute;
-      top: 0px;     /* adjust as needed */
-      left: 0px;    /* adjust as needed */
-      width: 350px;  /* optional size */
+      top: 200px;     /* adjust as needed */
+      left: 200px;    /* adjust as needed */
+      width: 300px;  /* optional size */
       pointer-events: none; /* allows clicks to pass through to canvas */
       z-index: 1;    /* ensure it stays above the canvas */
     }
     img {
-        width: 350px;
+        width: 300px;
     }
     #rela div {
         color: yellow;
@@ -35,14 +35,22 @@
 </head>
 <body>
   <div id="container">
+    <button id="playButton">这是什么，要不要点一下？</button>
     <canvas id="fireworksCanvas"></canvas>
     <div id="rela">
         <img src="catwithrose.png" alt="Cat with Rose">
         <div>今天是520</div>
     </div>
   </div>
+  <audio id="myAudio">
+    <source src="ninghao.mp3" type="audio/mpeg">
+  </audio>
 
   <script>
+    document.getElementById('playButton').addEventListener('click', function() {
+      document.getElementById('myAudio').play();
+    });
+    
     const canvas = document.getElementById('fireworksCanvas');
     const ctx = canvas.getContext('2d');
     let fireworks = [];
